Version 2.0.0rc7 - The "xxxxxxxxxxxxxxxx" version.
----------
2004-10-XX

	Phoenix:
		* Fixed '&' char next to Preferences in amuleweb page, as
		  reported by DreamWalker.

Version 2.0.0rc6 - The "We're so EVIL that we make you lose a sock in every pair" version.
----------
2004-10-03
	
	deltaHF:
		* GUI for MyInfo at Server window.
		* Added 'About' button.
		* Fixed sorting upload list by speed
		* Changed the Search dialog. 
		* Fixes websearch for jugle.net
		* Added hability for send msg to clients in upload queue, without having to add 
		  them as friends (based on Kry's download queue send-on-right-click implementation)
		* Translations update.

	falso:
		* New upstream cas version. Now supports creating html pages with the statistics
		* Now cas runs on netbsd.
		* Misc fixes on cas.

	GonoszTopi:
		* Patch to fix buffer overflow in cas when line had more than
		  80 chars.
		* Patch to fix help switch in ExternalConnector.cpp
		* Patch to create -c switch in amulecmd: now the command line
		  version can connect, execute a command and exit.

	Hetfield:
		* Lots of 3.4.x compilation fixes, due to -DWX_PRECOMP
		  and wx headers checks.
		* Configure cleanup, safetray remove and nice cosmetics for tools
		* Configure option added: --enable-embedded_crypto to use amule crypto code
		and bypass crypto libs. Also fix freeze problem.
		* fixed crypto usage in core with configure and compilation flags
		* Re-enable Pentium4 and SSE2 optimizations fro Crypto stuff

	Jacobo221:
		* Fixed issue on the About button.

	Kry:
		* Got back from hell.
		* Imported eMule's 0.44x new corruption handling: AICH
		   AICH stands for Advanced Inteligent Corruption Handling, and avoid having to 
		   re-download a full part everytime we get corruption on a file. With AICH, you will
		   just re-download the 184Kb block that has corruption. It uses HashTrees to achieve 
		   the corruption diagnosis. 